--- a/index.html
+++ b/index.html
@@ -4,6 +4,449 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+	width: 100%;
+	float: left;
+	overflow: hidden;
+	/*font-family: "Hind", sans-serif;*/
+  }
+  
+  
+  #mapa_responsivo {
+	margin-bottom: 500px;
+  }
+  
+  /* MAPA */
+  .box-mapa {
+	position: relative;
+	z-index: 1;
+	float: left;
+	padding: 20px 0 0 15px;
+  }
+  
+  #map {
+	display: none;
+	transform: scale(1.2);
+	transform: scale(1);
+	display: table !important;
+	margin: 0 auto;
+	float: left;
+  }
+  
+  #map .state {
+	cursor: pointer;
+  }
+  
+  #map .state .shape {
+	cursor: pointer;
+	-width: 0;
+  }
+  
+  #map .state .label_icon_state {
+	fill: #fff;
+	font-family: Arial;
+	font-size: 11px;
+	line-height: 12px;
+	font-weight: normal;
+  }
+  
+  #map .state .label_state {
+	display: none;
+	font-family: Arial;
+	font-size: 14px;
+	line-height: 16px;
+	font-weight: bold;
+  }
+  
+  #map .model-davi .state:hover .label_state {
+	display: block;
+	fill: #25959b !important;
+  }
+  
+  #map .model-davi .state .shape {
+	fill: #ddd;
+  }
+  
+  #map .model-davi .state:hover .shape {
+	fill: #25959b !important;
+  }
+  
+  #map .model-davi .state .icon_state {
+	fill: #cccccc;
+  }
+  
+  #map .model-davi .state:hover .icon_state {
+	fill: #25959b;
+  }
+  
+  #map .model-davi .state .icon_state+.label_icon_state {
+	fill: #666;
+  }
+  
+  #map .model-davi .state .label_icon_state {
+	fill: #666;
+  }
+  
+  #map .model-davi .state:hover .label_icon_state {
+	fill: #FFF;
+  }
+  
+  #map .model-davi .state .label_state {
+	fill: #fff;
+	display: none;
+  }
+  
+  #map .model-davi .state .shape {
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+  }
+  
+  #map .model-davi .state:hover .shape {
+	fill: #25959b;
+  }
+  
+  
+  .parca {
+	position: relative;
+	float: left;
+	padding: 0 0 0 1%;
+	margin-left: 10px;
+  }
+  
+  .parca select {
+	display: none;
+	margin: 0 auto;
+	width: 230px;
+	border: 1px solid #999;
+	height: 40px;
+	padding: 9px;
+	border-radius: 0;
+  }
+  
+  .parca .estado {
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+	border: 1px solid #DDD;
+	position: absolute;
+	margin-top: 45px;
+	opacity: 0;
+	border-radius: 5px;
+	visibility: visible;
+	padding: 10px;
+	left: 0;
+	right: 0;
+	min-width: 400px;
+	display: table;
+	margin: 57px 0 0 10px;
+	box-shadow: 0 1px 80px 0 rgba(0, 0, 0, .3);
+  }
+  
+  .parca .estado h3 {
+	margin-top: 0;
+	display: block;
+	background-color: #25959b;
+	padding: 10px;
+	text-transform: uppercase;
+	color: #FFF;
+	margin-bottom: 20px;
+  }
+  
+  .parca .estado ul {
+	padding-left: 0px;
+  }
+  
+  .parca .estado ul li {
+	line-height: 13px;
+	list-style: none;
+  }
+  
+  .parca .estado ul li a {
+	color: #25959b;
+  }
+  
+  .parca #box_mg.estado {
+	opacity: 1;
+	visibility: visible;
+  }
+  
+  
+  
+  @media(max-width: 991px) {
+	.parceiros .two .parca .estado {
+	  display: block;
+	  margin: 45px auto;
+	  float: none;
+	  position: absolute;
+	  left: 0;
+	  right: 0;
+	  min-width: 160px;
+	  max-width: 306px;
+	}
+  
+	.box-mapa {
+	  position: relative;
+	  top: 0;
+	  left: initial;
+	  display: table;
+	  margin: 0 auto;
+	}
+  }
+  
+  @media(max-width: 500px) {
+	.box-mapa {
+	  display: block;
+	}
+  
+	.parca select {
+	  display: none;
+	}
+  }
+  
+  @media (max-width: 1024px) {
+	#mapa_responsivo #map {
+	  transform: scale(0.7) !important;
+	}
+  
+	.column_column ul {
+	  margin: 0 0 0px 2px;
+	}
+  
+	.box-mapa {
+	  margin-left: -7.8em !important;
+	}
+  
+	.parca .estado {
+	  margin: 0px 0 0px 0px !important;
+	  min-width: 300px !important;
+	}
+  
+  
+  }
+  
+  .column_column ul {
+	margin: 0 0 0px 2px !important;
+  }
+  
+  
+  
+  /* Floating Social Media Bar Style Starts Here */
+  .fl-fl {
+	background: #007a7f;
+	border-radius: 0 5px 5px 0;
+	text-transform: none;
+	letter-spacing: 1px;
+	padding: 1px;
+	margin-top: 50px;
+	width: 208px;
+	position: fixed;
+	left: -170px;
+	z-index: 1000;
+	font-family: 'Poppins';
+	font-size: 11px;
+	font: normal normal 10px;
+	-webkit-transition: all .25s ease;
+	-moz-transition: all .25s ease;
+	-ms-transition: all .25s ease;
+	-o-transition: all .25s ease;
+	transition: all .25s ease;
+  }
+  
+  .fab {
+	font-size: 18px;
+	color: #fff;
+	/*padding: 10px 0;
+	width: 25px;
+	margin-left: 20px;*/
+	float: right;
+	margin: 12px 10px;
+	text-align: center;
+  }
+  
+  /*.fa-facebook {
+	margin-left: 45px;
+  }
+  
+  .fa-linkedin {
+	margin-left: 78px;
+  }
+  
+  .fa-youtube{
+	  margin-left: 76px;
+  }
+  
+  .fa-instagram{
+	  margin-left: 65px;
+  }
+  
+  .fa-whatsapp{
+	  margin-left: 65px;
+  }*/
+  
+  .nomes_redes {
+	/*width: 60px;*/
+	margin: 0 10px 0 45px;
+  }
+  
+  .nomes_redes_ov {
+	margin: 0 10px 0 25px;
+  }
+  
+  
+  /*.fab {
+	font-size: 20px;
+	color: #fff;
+	padding: 10px 0;
+	width: 10px;
+	margin-left: 25px;
+  }*/
+  
+  .fas {
+	font-size: 18px;
+	color: #fff;
+	/*padding: 10px 0;*/
+	float: right;
+	margin: 12px 10px;
+  }
+  
+  .fl-fl:hover {
+	left: 0;
+  }
+  
+  .fl-fl a {
+	color: #fff !important;
+	text-decoration: none;
+	text-align: center;
+	line-height: 43px !important;
+	width: 90px !important;
+	display: inline;
+	/*vertical-align: top!important;*/
+  }
+  
+  .float-fb {
+	top: 160px;
+  }
+  
+  .float-in {
+	top: 207px;
+  }
+  
+  .float-yt {
+	top: 254px;
+  }
+  
+  .float-ig {
+	top: 301px;
+  }
+  
+  .float-wa {
+	top: 348px;
+  }
+  
+  .float-ov {
+	top: 395px;
+  }
+
+  @media(max-width: 1024px) {
+	#map {
+	  transform: scale(1);
+	}
+
+	.parca .estado {
+		margin: 0px 0px 0px -5em !important;
+		min-width: 300px !important;
+	}
+  
+	.box-mapa {
+	  margin-left: -12.8em !important;
+	}
+  }
+
+  @media(max-width: 1024px) {
+	#map {
+	  transform: scale(1);
+	}
+
+	.parca .estado {
+		margin: 2.7em 0px 0px 6em !important;
+    min-width: 300px !important;
+	}
+
+	#mapa_responsivo #map {
+		margin-left: 5em!important;
+	}
+
+	#ondeComprar {
+		width: 5em!important;
+	}
+  
+	.box-mapa {
+	  margin-left: -12.8em !important;
+	}
+
+  }
+  
+  @media(max-width: 768px) {
+	.parca .estado {
+	margin: 4em 0px 0px 0em !important;
+    min-width: 300px !important;
+	}
+
+	#mapa_responsivo #map {
+		
+		margin-left: 2em!important;
+	}
+
+	
+  
+  }
+
+  @media(max-width: 820px) {
+	.parca .estado {
+	margin: 3.7em 0px 0px -2em !important;
+    min-width: 300px !important;
+	}
+
+	#mapa_responsivo #map {
+		
+		margin-left: 2em!important;
+	}
+
+	
+  
+  }
+
+  @media screen and (min-width: 100px) and (max-width: 480px) {
+		
+	#mapa_responsivo #map {
+		margin-left: -2em!important;
+	}
+	.parca .estado {
+	margin: 2.7em 0px 0px -4em !important;
+	min-width: 300px !important;
+	}
+
+	.box-mapa {
+		margin-left: -10em !important;
+		margin-top: 3em!important;
+	}
+}
+
+.some {
+	display: none!important;
+	visibility: hidden!important;
+	opacity: 0!important;
+}
+  
+  /* Floating Social Media Bar Style Ends Here */
+  
+    </style>
 </head>
 <body>
     <p>&nbsp;</p>
@@ -347,5 +790,52 @@
 </ul>
 </div>
 </div>
+<script>
+    (function ($) {
+	$(document).ready(function () {
+		//Exibe box de parceiros correspondetes em cada estado quando houver click.
+		$("#map .state").click(function () {
+			var estado = $(this).attr("data-state");
+			var box_estado = "#box_" + estado;
+
+			console.log(".state_" + estado + " .shape");
+
+			// Reseta o estado e seu label para a cor padrão
+			$(".state .label_icon_state").css({ fill: "#666" });
+			$(".state .shape").css({ fill: "#ddd" });
+
+			// Colore o estado selecionado
+			$("#state_" + estado + " .label_icon_state").css({ fill: "#FFF" });
+			$("#state_" + estado + " .shape").css({ fill: "#fd7132" });
+
+			//Verifica se o cadastro de contato do estado existe
+			if ($("#box_" + estado).length == 0) {
+				console.log("Não existe");
+			} else {
+				$(".parca .estado").addClass("some");
+				$(".parca .estado").css({
+					opacity: 0,
+					visibitity: "hidden",
+					display: "none"
+				});
+
+				$(box_estado).removeClass("some");
+				$(box_estado).css({ opacity: 1, visibitity: "visible", display: "block" });
+			}
+		});
+
+		$("#map .state").click(function (e) {
+			e.preventDefault();
+		});
+
+		//Change select responsive
+		$("#seletory").change(function () {
+			$(".parca .estado").css({ opacity: 0, visibitity: "hidden" });
+			$("#box_" + $(this).val()).css({ opacity: 1, visibitity: "visible" });
+		});
+	});
+})(jQuery);
+
+</script>
 </body>
 </html>
